# image-searching-macos

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: BENCHMARKS.md
packaging/homebrew/: imgsearch.rb
src/imgsearch/: __init__.py  cli.py  config.py
src/imgsearch/commands/: _common.py  clean.py  dedup.py  index.py  search.py  status.py
src/imgsearch/core/: duplicate_finder.py  embedder.py  index.py  manifest.py  meta_store.py  preprocess.py  scanner.py  vector_store.py
tests/: conftest.py  test_config.py  test_dedup.py  test_embedder_factory.py  test_index_roundtrip.py  test_meta_store.py  test_scanner.py
